<resources>
    <string name="app_name">LIBER</string>
    <string name="liber">liber</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="notification">Notification</string>
    <string name="log_out">Log Out</string>

    <string name="name_user">Name User</string>
    <string name="id_user">0001</string>
    <string name="title_activity_pertemuan_list">PertemuanListActivity</string>

    <string name="mata_kuliah">Kalkulus</string>
    <string name="kode_kelas">A7</string>
    <string name="hari">Senin</string>
    <string name="name">Akhner Frisca</string>
    <string name="border1">border!</string>
    <string name="matkul">Kalkulus</string>
    <string name="kelas">A7</string>
    <string name="hariBorder">senin, 9:00 – 10:40</string>
    <string name="namaBorder">Akhner Frisca</string>
    <string name="hari_jam">Senin, 9:00 – 10:40</string>
    <string name="pertemuan">Pertemuan 1</string>
    <string name="tanggal">6 desember 2021</string>
    <string name="materi">Limit Fungsi</string>
    <string name="status_kehadiran">Status Kehadiran:</string>
    <string name="pengajar">Budi, M.Pd</string>
    <string name="jam">09:00 – 10:40</string>

    <string name="title_pengumuman">Pengumuman</string>
    <string name="pengumuman">Diberitahukan kepada mahasiswa/i Universitas ABC bahwa aktifitas perkuliahan yang diadakan di area kampus harus mengikuti protokol kesehatan.</string>
    <string name="ttd">TTD</string>
    <string name="sumber">Rektor Universitas ABC</string>

    <string name="absen">Hadir</string>
    <string name="submit">Submit</string>
    <string name="kegiatan">Aktifitas Pembelajaran</string>
    <string name="tugas">Kerjakan soal di link GDrive ini, lalu buat di kertas double folio dan upload dalam bentuk pdf. *</string>
    <string name="tanggal_view">Tanggal</string>
    <string name="waktu_view">Waktu</string>
    <string name="status_upload"> </string>

    <string name="exit">Press back again to exit application</string>
</resources>