<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="168dp"
        android:src="@drawable/bg_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/liber_text_sc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico_regular"
        android:text="@string/liber"
        android:textColor="@color/general"
        android:textSize="48sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="54dp"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/UsernameInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="151dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="375dp"
        android:ems="10"
        android:hint="@string/username"
        android:padding="8dp"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/general"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/login_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="291dp"
        android:ems="10"
        android:hint="@string/password"
        android:padding="8dp"
        android:inputType="textPassword"
        android:textColorHint="@color/general"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/login_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_bg" />

    <Button
        android:id="@+id/button"
        android:layout_width="128dp"
        android:layout_height="50dp"
        android:layout_marginTop="364dp"
        android:layout_marginBottom="201dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_in"
        android:textColor="@color/general"
        app:layout_constraintBottom_toBottomOf="@+id/login_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_bg"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>